--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Печенька</title>
 
 <style>
+
 * {
   margin: 0;
   padding: 0;
@@ -38,7 +39,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 40px;
+  margin-bottom: 40px; 
 }
 
 .logo {
@@ -78,14 +79,14 @@ nav a {
   flex-direction: column;
   background: #d0c0e0;
   padding: 20px;
-  position: fixed;
+  position: fixed; 
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  
   z-index: 1000;
-  margin: 0;
-  padding-top: 70px;
+  overflow-y: auto; 
+  margin: 0; 
 }
 
 .mobile-menu a {
@@ -97,35 +98,34 @@ nav a {
 }
 
 .close {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  font-size: 28px;
+  align-self: flex-end;
+  font-size: 24px;
   cursor: pointer;
   color: #3f1f2f;
+  
 }
 
 .section-title {
   text-align: center;
   font-size: 32px;
-  margin: 40px 0 30px;
+  margin: 40px 0 30px; 
   color: #3f1f2f;
   padding: 0 20px;
   font-weight: bold;
 }
 
 section {
-  padding: 10px;
+  padding:  10px;
   text-align: center;
 }
 
 .section-1 {
   max-width: 800px;
   margin: 0 auto;
-  font-size: 22px;
+  font-size: 22px; 
   line-height: 1.6;
   padding: 0 20px;
-  font-weight: 600;
+  font-weight: 600; 
   color: #3f1f2f;
 }
 
@@ -138,7 +138,7 @@ section {
   gap: 20px;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 10px;
+  margin-top: 10px; 
 }
 
 .card {
@@ -170,7 +170,6 @@ section {
   margin-bottom: 15px;
   object-fit: contain;
 }
-
 .slider-section {
   display: none;
   margin-top: 30px;
@@ -224,7 +223,7 @@ section {
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   max-width: 1000px;
-  margin: 40px auto 0;
+  margin: 40px auto 0; 
   padding: 0 20px;
 }
 
@@ -292,9 +291,7 @@ section {
   }
 
   header {
-    margin-bottom: 30px;
-    position: relative;
-    z-index: 1001;
+    margin-bottom: 30px; 
   }
 
   .section-title {
@@ -303,7 +300,7 @@ section {
   }
 
   .section-1 {
-    font-size: 18px;
+    font-size: 18px; 
     font-weight: 600;
     margin: 0 auto;
   }
@@ -513,8 +510,7 @@ footer {
     padding: 25px 15px 15px;
   }
 }
-</style>
-</head>
+</style></head>
 
 <body>
 
